test libp2p in init

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipdid",
-  "description": "The IPDID ecosystem",
+  "description": "An IPDID Node CLI",
   "version": "0.0.1",
   "author": "Ming-der Wang <mingderwang@gmail.com>",
   "bin": {
@@ -11,7 +11,12 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
-    "localhost": "^0.3.4"
+    "cids": "^1.1.6",
+    "ipfs": "^0.54.4",
+    "libp2p": "^0.31.0-rc.6",
+    "libp2p-noise": "^3.0.0",
+    "localhost": "^0.3.4",
+    "uint8arrays": "^2.1.5"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
