--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bugs": "https://github.com/mingderwang/ipdid/issues",
   "dependencies": {
     "@ipld/block": "^6.0.4",
+    "@ipld/dag-cbor": "^5.0.0",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
