--- a/example/react-app/package.json
+++ b/example/react-app/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "did-resolver": "3.1.0",
+    "ipdid-did-resolver": "../..",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "ipdid-did-resolver": "../.."
+    "web-did-resolver": "^2.0.4"
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
