--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "dependencies": {
         "@ipld/block": "^6.0.4",
+        "@ipld/dag-cbor": "^5.0.0",
+        "cids": "^1.1.6",
         "datastore-core": "^4.0.0",
         "did-resolver": "^3.1.0",
         "interface-datastore": "^4.0.0",
