--- a/example/react-app/package.json
+++ b/example/react-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "did-resolver": "3.1.0",
-    "ipdid-did-resolver": "../..",
+    "ipdid-did-resolver": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
