--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "main": "dist/index.js",
     "source": "src/index.ts",
     "typings": "lib/src/index.d.ts",
-    "repository": "github.com:mingderwang/ipdid-did-resolver",
     "author": "Ming-der Wang<mingderwang@gmail.com",
     "license": "MIT",
     "devDependencies": {
@@ -29,5 +28,13 @@
         "interface-datastore": "^4.0.0",
         "ipfs": "^0.54.4",
         "uint8arrays": "^2.1.5"
-    }
+    },
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/IPDID/ipdid-did-resolver.git"
+    },
+    "bugs": {
+      "url": "https://github.com/IPDID/ipdid-did-resolver/issues"
+    },
+    "homepage": "https://github.com/mingderwang/ipdid-did-resolver"
 }
